apps/base/kyverno/tests/resources/fail-latest-tag-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-latest-tag-pod
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:latest
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 100m
          memory: 64Mi
      securityContext:
        allowPrivilegeEscalation: false
