apps/base/kyverno/tests/resources/fail-no-limits-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-no-limits-pod
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:1.25.3
      securityContext:
        allowPrivilegeEscalation: false
