apps/base/kyverno/tests/resources/fail-priv-escalation-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-priv-escalation-pod
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:1.25.3
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 100m
          memory: 64Mi
      securityContext:
        allowPrivilegeEscalation: true
