apps/base/kyverno/tests/resources/skip-demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skip-demo-pod
  namespace: demo
spec:
  containers:
    - name: httpbin
      image: kennethreitz/httpbin@sha256:599fe5e5073102dbb0ee3dbb65f049dab44fa9fc251f6835c9990f8fb196a72b
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 100m
          memory: 64Mi
      securityContext:
        allowPrivilegeEscalation: false
