apps/base/kyverno/tests/resources/skip-falco-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skip-falco-pod
  namespace: falco
spec:
  containers:
    - name: falco
      image: falcosecurity/falco-no-driver:0.43.1
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 500m
          memory: 512Mi
      securityContext:
        privileged: true
        allowPrivilegeEscalation: true
